welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:16: error: ')' expected but 'else' found.
    } else{
      ^SnakeBuggle:31: error: ')' expected but 'else' found.
    } else{
      ^